--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,2 +1,26 @@
-/**/
+img{
+			width: 110px;
+			border-bottom-style: solid;
+			border-top-left-radius: 20px;
+			border-top-right-radius: 20px;
+      color: white;
+		}
+
+body{
+     background-color:#B22222;
+
+    }
+
+   
+		.personagem{
+       background-color: white;
+       color:#B22222;
+        font-size: 17px;
+			width: 116px;
+			margin: 20px;
+      border-color: black;
+			border-style: solid;
+			border-radius: 23px;
+			text-align: center;
+		}
 
